# sodoku

./: Cargo.toml  README.md
src/: dec.rs  examples.rs  lib.rs  main.rs
