[package]
name = "sodoku"
version = "0.0.1"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A crate for generating and solving [sodokus](https://en.wikipedia.org/wiki/Sudoku)."
repository = "https://github.com/TianyiShi2001/sodoku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
